test/classes/errors/newValueNotType2.compopts
--ignore-errors-for-pass --no-legacy-classes
--ignore-errors-for-pass --legacy-classes
